--- a/src/blocks/container/style.scss
+++ b/src/blocks/container/style.scss
@@ -219,13 +219,22 @@
 		}
 
 		// CRITICAL: Override WordPress's auto-generated margin rules for grid items
-		// WordPress generates :root :where(.wp-block-designsetgo-container-is-layout-constrained) > *
-		// which adds margins to content inside child containers, creating misalignment
-		// We need to remove these margins for containers that are direct children of grids
+		// WordPress generates multiple selector patterns that add margins to content inside child containers:
+		// 1. > * (all children)
+		// 2. > * + * (adjacent siblings - all except first)
+		// 3. > :first-child (first child specifically)
+		// We need to override all of these for containers that are direct children of grids
 		> .dsg-container,
 		> .wp-block-designsetgo-container {
-			// Override WordPress's layout margins for child containers in grids
 			> * {
+				margin-block-start: 0 !important;
+				margin-block-end: 0 !important;
+			}
+			> * + * {
+				margin-block-start: 0 !important;
+				margin-block-end: 0 !important;
+			}
+			> :first-child {
 				margin-block-start: 0 !important;
 			}
 		}
@@ -235,9 +244,21 @@
 	&[style*="display: grid"],
 	&[style*="display:grid"] {
 		// Override WordPress's layout margins for child containers in grids
+		// WordPress uses multiple selector patterns, we need to override all of them:
+		// 1. > * (all children)
+		// 2. > * + * (adjacent siblings - all except first)
+		// 3. > :first-child (first child specifically)
 		> .dsg-container,
 		> .wp-block-designsetgo-container {
 			> * {
+				margin-block-start: 0 !important;
+				margin-block-end: 0 !important;
+			}
+			> * + * {
+				margin-block-start: 0 !important;
+				margin-block-end: 0 !important;
+			}
+			> :first-child {
 				margin-block-start: 0 !important;
 			}
 		}
